refactor: 코드 포매팅 및 불필요한 코드 수정